fix: Removed overflow on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%;
+    overflow-x: hidden;
 }
 
 body,
